<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Intro"
            android:icon="@drawable/ic_casa"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_Lista_Productos"
            android:icon="@drawable/ic_productos"
            android:title="Mis productos" />

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_tareas"
            android:title="Pedidos" />

        <item
            android:id="@+id/nav_Carrito"
            android:icon="@drawable/ic_carrito_compras"
            android:title="Carrito" />


        <item
            android:id="@+id/nav_Mi_Usuario"
            android:icon="@drawable/ic_persona"
            android:title="@string/mi_usuario" />

    </group>

    <item android:title="Control de cuentas">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_salir"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
