<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingTop="15dp"
                android:text="@string/datos_personales"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_Imagen"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/abrir_galeria" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fab_agregar_imagen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="160dp"
                            android:layout_marginTop="140dp"
                            app:backgroundTint="@color/colorBlue"
                            app:fabCustomSize="50dp"
                            app:maxImageSize="20dp"
                            android:src="@drawable/ic_agregar"
                            app:elevation="0dp"/>

                    </FrameLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/nombre"
                        android:textColorHint="@color/colorBlue"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/txt_Nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_persona"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorBlue"
                            android:inputType="textPersonName|textCapSentences|textCapWords"
                            android:maxLength="50"
                            android:textAlignment="textStart"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/username"
                        android:textColorHint="@color/colorBlue"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/txt_Username"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_persona"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorBlue"
                            android:inputType="textPersonName|textCapSentences|textCapWords"
                            android:maxLength="50"
                            android:textAlignment="textStart"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/correo"
                        android:textColorHint="@color/colorBlue"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/txt_Correo"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_correo"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorBlue"
                            android:inputType="textEmailAddress"
                            android:textAlignment="textStart"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/numerotelefono"
                        android:textColorHint="@color/colorBlue"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/txt_Telefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_llamar"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorBlue"
                            android:inputType="phone"
                            android:maxLength="15"
                            android:textAlignment="textStart"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>