<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         tools:context=".Agregar.Productos.Agregar_Producto">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v4.view.ViewPager
                            android:id="@+id/vpMedia"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:visibility="gone" />

                        <android.support.design.widget.TabLayout
                            android:id="@+id/tabDots"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:tabBackground="@drawable/tab_selector"
                            app:tabGravity="center"
                            app:tabIndicatorHeight="0dp" />

                        <TextView
                            android:id="@+id/txtNoHay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_hay_imagenes_ni_videos"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:textSize="20sp"
                            android:padding="20sp"
                            android:textColor="#AEAEAE"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/iv_RegistrarReporte_Foto"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:foreground="?attr/selectableItemBackground"
                                android:nestedScrollingEnabled="true"
                                android:padding="15dp"
                                android:scaleType="fitCenter"
                                android:tint="@color/colorBlue"
                                app:srcCompat="@drawable/ic_agregar_foto" />

                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_RegistrarReporte_Titulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/titulo"
                            android:textAlignment="center"
                            android:textColorHint="#808080"
                            app:counterEnabled="true"
                            app:counterMaxLength="30"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/txt_titulo_producto"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:drawableTint="@color/colorPrimary"
                                android:inputType="textCapWords|textPersonName"
                                android:maxLength="30"
                                android:textStyle="bold"
                                android:paddingTop="15dp"
                                android:textAlignment="textStart"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/descripcion"
                            android:textAlignment="center"
                            android:textColorHint="#808080"
                            app:counterEnabled="true"
                            app:counterMaxLength="50"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/txt_descripcion_prducto"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:drawableTint="@color/colorPrimary"
                                android:inputType="textCapWords|textMultiLine"
                                android:maxLength="50"
                                android:textStyle="bold"
                                android:paddingTop="15dp"
                                android:textAlignment="textStart"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>



                        <LinearLayout
                            android:id="@+id/ly_HayIncidencia"
                            android:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                                <Spinner
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:paddingBottom="10dp"
                                    android:id="@+id/spn_categoria_producto"/>



                            <android.support.design.widget.TextInputLayout
                                android:layout_marginTop="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="#808080"
                                android:textAlignment="center"
                                app:counterEnabled="true"
                                android:visibility="visible"
                                app:counterMaxLength="20"
                                app:errorEnabled="true"
                                android:hint="Cantidad disponible">

                                <EditText
                                    android:id="@+id/txt_AgregarReporte_IncidenciaAgropecuaria"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="textStart"
                                    android:maxLength="20"
                                    android:textStyle="bold"
                                    android:drawableTint="@color/colorPrimary"
                                    android:drawablePadding="5dp"
                                    android:inputType="number"
                                    android:textSize="18sp"
                                    android:paddingTop="15dp"/>
                            </android.support.design.widget.TextInputLayout>




                            </LinearLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Precio por unidad"
                                android:textAlignment="center"
                                android:textColorHint="#808080"
                                android:layout_marginBottom="10dp"
                                app:counterEnabled="true"
                                app:counterMaxLength="50"
                                app:errorEnabled="true">

                                <EditText
                                    android:id="@+id/txt_RegistrarReporte_DescripcionIncidencia"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="15dp"
                                    android:drawableTint="@color/colorPrimary"
                                    android:inputType="numberDecimal"
                                    android:maxLength="50"
                                    android:paddingTop="15dp"
                                    android:textStyle="bold|italic"
                                    android:textAlignment="textStart"
                                    android:textSize="18sp" />
                            </android.support.design.widget.TextInputLayout>
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="20dp"
                            android:id="@+id/spn_AgregarReporte_tipoIncidencia"/>
                        <Button
                            android:id="@+id/btn_RegistrarReporte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="29dp"
                            android:background="@drawable/boton_redondo"
                            android:text="Agregar"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                        </LinearLayout>
                </android.support.v7.widget.CardView>


                    </LinearLayout>
        </ScrollView>

</FrameLayout>
